<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/settings_title">

	<PreferenceCategory
		android:title="@string/settings_core_category">
		<CheckBoxPreference 
			android:key="WeChatDecorator.enabled"
			android:defaultValue="true"
			android:summary="@string/decorator_wechat_description"
			android:title="@string/decorator_wechat_title"/>
		<CheckBoxPreference
			android:key="WeChatDecorator.image_preview"
			android:defaultValue="false"
			android:summary="@string/decorator_wechat_image_preview_description"
			android:title="@string/decorator_wechat_image_preview_title"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/settings_optional_category">
		<CheckBoxPreference 
			android:key="MIUIDecorator.enabled"
			android:defaultValue="false"
			android:summary="@string/decorator_miui_description"
			android:title="@string/decorator_miui_title"/>
		<CheckBoxPreference 
			android:key="MediaDecorator.enabled"
			android:defaultValue="false"
			android:summary="@string/decorator_media_description"
			android:title="@string/decorator_media_title"/>
	</PreferenceCategory>

	<Preference
		android:selectable="false"
		android:summary="@string/settings_restart_summary"
		android:title="@string/settings_apply_title" />

</PreferenceScreen>
